# ssafy-pjt

pjt1/: README.md
pjt1/client/: package-lock.json  package.json
pjt1/client/src/: App.vue  main.js
pjt1/md/md_배중권/: 221117 - 3일차.md  221121 - 4일차.md  221122 - 5일차.md  221123 - 6일차.md
pjt1/server/: .gitignore  db.sqlite3  requirements.txt
pjt1/server/movies/: models.py  serializers.py  urls.py  views.py
pjt1/server/server/: settings.py
pjt2/: README.md
pjt2/project1/: package-lock.json
pjt2/project1/backend/: .gitignore  Dockerfile  README.md  config.js  distance.py  encoding_img_list.pkl  makeup.py  package-lock.json  package.json  personalcolor.py  requirements.txt  server.js  storage.js
pjt2/project1/frontend/: Dockerfile  package-lock.json  package.json
pjt3/: .gitmessage.txt  README.md
pjt3/.gitlab/issue_templates/: bug.md  documentation.md  feat.md  help.md  refactoring.md
pjt3/.gitlab/merge_request_templates/: default.md
pjt3/Figma/: README.md
pjt3/backend/: Dockerfile  build.gradle  settings.gradle
pjt3/document/: 0317_배포과정.md
pjt3/exec/: tlens_sqldump.7z  개발 환경.md  빌드 및 배포.md  시연 시나리오.md
pjt3/frontend/: Dockerfile  package-lock.json  package.json
pjt3/frontend/src/: App.jsx  (+4 more)
pjt4/: README.md
pjt4/BE/: package-lock.json  package.json  s.sh  server.js
pjt4/FE/: package-lock.json  package.json
pjt4/FINAL/: Display.py  Line.cpp  Server.py  ServerToDisplay.txt  Ui.py
pjt4/HW/: CMakeLists.txt  Lolind32_ili9341.ino  Makefile  OpencvCameraTest.cpp  cameratest.py  driver.py  hyosang.cpp  main.py  moon.py  nano33.ino  opencv.cpp  pub.py  sub.py  test.cpp  test.py  tftlcd.ino
pjt4/ROS/robot_ws/src/turtle_cpp/: CMakeLists.txt  package.xml
pjt4/ROS/robot_ws/src/turtle_cpp/src/: drive.cpp  lidar.cpp  pub.cpp  start_goal_pub.cpp  sub.cpp
(+867 files in other folders)
